# Requirements Update (requirements will need to be reinstalled)

# Removed Features

# New Features
Added `overlay_filetype` and `overlay_quality` settings to control the filetype and quality of overlay images.

# Updates
Added `starting_only` template variable to the `mal` Collection Default.
# Defaults

# Bug Fixes
Catch bad ID data from Plex
Fixes `- git` file calls

Various other Minor Fixes

Closed legacy issues on GitHub